# paper-quine

./: .agents.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  objective.md  pyproject.toml
scripts/: build_true_quine.py
src/paper_quine/: __init__.py  model.py  paper.tex  verify.py
src/paper_quine/data/: paper.sha256  weights.b85  weights.sha256
tests/: test_model.py
