[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper_quine"
version = "0.1.0"
description = "Deterministic paper quine demo with reproducible verification tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "ruff==0.5.6",
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "mypy==1.10.0",
  "pip-audit==2.7.3",
  "bandit==1.7.9",
  "detect-secrets==1.4.0",
  "pre-commit==3.7.1",
  "commitizen==3.28.0",
]

[tool.setuptools.package-data]
paper_quine = ["data/*.b85", "data/*.sha256", "paper.tex"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "Q"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=paper_quine --cov-report=term-missing --no-cov-on-fail"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["paper_quine"]

[tool.coverage.report]
skip_empty = true
precision = 2
